--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Switer's Homepage</title>
 </head>
 <body>
-	<h1>Hellow welcome to my home page</h1>
+	<h1>Hello, Welcome wo my homepage, it's empty !</h1>
 </body>
 </html>
