redirect to issues home page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>Switer's Homepage</title>
+    <script>
+        window.location.href = 'https://github.com/switer/switer.github.io/issues'
+    </script>
 </head>
 <body>
-	<h1>Hello, Welcome wo my homepage, it's empty !</h1>
 </body>
 </html>
